--- a/app/index.html
+++ b/app/index.html
@@ -30,8 +30,59 @@
 
 <body>
 
+	<header class="header">
+		<div class="container">
+			<div class="header__inner">
+				<span>ToDo list</span>
+				<img src="img/task.png" alt="task">
+			</div>
+		</div>
+	</header>
 
-Привет, мир!
+
+<main class="main">
+  <div class="container">
+    <div class="todo">
+      <div class="todo__app">
+        <div class="todo__title">
+          <span>Добавить задачу:</span>
+        </div>
+        <div class="todo__add-task">
+          <input class="todo__input" type="text" placeholder="Описание задачи">
+          <button class="todo__btn" class="btn-add">Добавить</button>
+        </div>
+        <div class="todo__tasks">
+          <ul class="todo__tasks-list">
+            <li><img src="img/task.png" alt="task">задачазадачазадачазадачазадачазадачазадачазадачазадачазадача</li>
+            <li><img src="img/task.png" alt="task">задача</li>
+            <li><img src="img/task.png" alt="task">задача</li>
+            <li><img src="img/task.png" alt="task">задача</li>
+            <li><img src="img/task.png" alt="task">задача</li>
+            <li><img src="img/task.png" alt="task">задача</li>
+            <li><img src="img/task.png" alt="task">задача</li>
+            <li><img src="img/task.png" alt="task">задачазадачазадачазадачазадачазадача</li>
+            <li><img src="img/task.png" alt="task">задача</li>
+            <li><img src="img/task.png" alt="task">задача</li>
+            <li><img src="img/task.png" alt="task">задача</li>
+            <li><img src="img/task.png" alt="task">задача</li>
+            <li><img src="img/task.png" alt="task">задача</li>
+            <li><img src="img/task.png" alt="task">задача</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</main>
+
+
+<footer class="footer">
+  <div class="container">
+    <div class="copyright">
+      <span>by introversion</span>
+      <p>2021</p>
+    </div>
+  </div>
+</footer>
 
 
 <script src="js/app.js"></script>
