--- a/app/html/index.html
+++ b/app/html/index.html
@@ -1,7 +1,39 @@
 @@include('./include/header.html')
 
 
-Привет, мир!
+<main class="main">
+  <div class="container">
+    <div class="todo">
+      <div class="todo__app">
+        <div class="todo__title">
+          <span>Добавить задачу:</span>
+        </div>
+        <div class="todo__add-task">
+          <input class="todo__input" type="text" placeholder="Описание задачи">
+          <button class="todo__btn" class="btn-add">Добавить</button>
+        </div>
+        <div class="todo__tasks">
+          <ul class="todo__tasks-list">
+            <li><img src="img/task.png" alt="task">задачазадачазадачазадачазадачазадачазадачазадачазадачазадача</li>
+            <li><img src="img/task.png" alt="task">задача</li>
+            <li><img src="img/task.png" alt="task">задача</li>
+            <li><img src="img/task.png" alt="task">задача</li>
+            <li><img src="img/task.png" alt="task">задача</li>
+            <li><img src="img/task.png" alt="task">задача</li>
+            <li><img src="img/task.png" alt="task">задача</li>
+            <li><img src="img/task.png" alt="task">задачазадачазадачазадачазадачазадача</li>
+            <li><img src="img/task.png" alt="task">задача</li>
+            <li><img src="img/task.png" alt="task">задача</li>
+            <li><img src="img/task.png" alt="task">задача</li>
+            <li><img src="img/task.png" alt="task">задача</li>
+            <li><img src="img/task.png" alt="task">задача</li>
+            <li><img src="img/task.png" alt="task">задача</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</main>
 
 
 @@include('./include/footer.html')
