--- a/app/index.html
+++ b/app/index.html
@@ -53,14 +53,14 @@
         </div>
         <div class="todo__tasks">
           <ul class="todo__tasks-list">
-            <li><img src="img/task.png" alt="task">задачазадачазадачазадачазадачазадачазадачазадачазадачазадача</li>
+            <li><img src="img/task.png" alt="task">метилпропенилендигидроксициннаменилакрилическая кислота</li>
             <li><img src="img/task.png" alt="task">задача</li>
             <li><img src="img/task.png" alt="task">задача</li>
             <li><img src="img/task.png" alt="task">задача</li>
             <li><img src="img/task.png" alt="task">задача</li>
             <li><img src="img/task.png" alt="task">задача</li>
             <li><img src="img/task.png" alt="task">задача</li>
-            <li><img src="img/task.png" alt="task">задачазадачазадачазадачазадачазадача</li>
+            <li><img src="img/task.png" alt="task">задача задачаник задача задача задача задача</li>
             <li><img src="img/task.png" alt="task">задача</li>
             <li><img src="img/task.png" alt="task">задача</li>
             <li><img src="img/task.png" alt="task">задача</li>
