--- a/app/index.html
+++ b/app/index.html
@@ -49,24 +49,91 @@
         </div>
         <div class="todo__add-task">
           <input class="todo__input" type="text" placeholder="Описание задачи">
-          <button class="todo__btn" class="btn-add">Добавить</button>
+          <button class="btn" id="btn-add">Добавить</button>
         </div>
         <div class="todo__tasks">
           <ul class="todo__tasks-list">
-            <li><img src="img/task.png" alt="task">метилпропенилендигидроксициннаменилакрилическая кислота</li>
-            <li><img src="img/task.png" alt="task">задача</li>
-            <li><img src="img/task.png" alt="task">задача</li>
-            <li><img src="img/task.png" alt="task">задача</li>
-            <li><img src="img/task.png" alt="task">задача</li>
-            <li><img src="img/task.png" alt="task">задача</li>
-            <li><img src="img/task.png" alt="task">задача</li>
-            <li><img src="img/task.png" alt="task">задача задачаник задача задача задача задача</li>
-            <li><img src="img/task.png" alt="task">задача</li>
-            <li><img src="img/task.png" alt="task">задача</li>
-            <li><img src="img/task.png" alt="task">задача</li>
-            <li><img src="img/task.png" alt="task">задача</li>
-            <li><img src="img/task.png" alt="task">задача</li>
-            <li><img src="img/task.png" alt="task">задача</li>
+
+            <li>
+              <div class="wrapper">
+                <img src="img/task.png" alt="task">кислота кислотакислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота 
+              </div>
+              <div class="wrapper">
+                <button class="btn btn-operation">Выполнено</button>
+                <button class="btn btn-operation">Удалить</button>
+              </div>
+            </li>
+
+            <li>
+              <div class="wrapper">
+                <img src="img/task.png" alt="task">кислота кислотакислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислотакислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислотакислота кислотакислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота
+              </div>
+              <div class="wrapper">
+                <button class="btn btn-operation">Выполнено</button>
+                <button class="btn btn-operation">Удалить</button>
+              </div>
+            </li>
+
+            <li>
+              <div class="wrapper">
+                <img src="img/task.png" alt="task">кислота кислотакислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота 
+              </div>
+              <div class="wrapper">
+                <button class="btn btn-operation">Выполнено</button>
+                <button class="btn btn-operation">Удалить</button>
+              </div>
+            </li>
+
+            <li>
+              <div class="wrapper">
+                <img src="img/task.png" alt="task">кислота кислотакислота 
+              </div>
+              <div class="wrapper">
+                <button class="btn btn-operation">Выполнено</button>
+                <button class="btn btn-operation">Удалить</button>
+              </div>
+            </li>
+
+            <li>
+              <div class="wrapper">
+                <img src="img/task.png" alt="task">кислота кислотакислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота 
+              </div>
+              <div class="wrapper">
+                <button class="btn btn-operation">Выполнено</button>
+                <button class="btn btn-operation">Удалить</button>
+              </div>
+            </li>
+
+            <li>
+              <div class="wrapper">
+                <img src="img/task.png" alt="task">кислота кислотакислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота 
+              </div>
+              <div class="wrapper">
+                <button class="btn btn-operation">Выполнено</button>
+                <button class="btn btn-operation">Удалить</button>
+              </div>
+            </li>
+
+            <li>
+              <div class="wrapper">
+                <img src="img/task.png" alt="task">кислота кислотакислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота 
+              </div>
+              <div class="wrapper">
+                <button class="btn btn-operation">Выполнено</button>
+                <button class="btn btn-operation">Удалить</button>
+              </div>
+            </li>
+
+            <li>
+              <div class="wrapper">
+                <img src="img/task.png" alt="task">кислота кислотакислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота 
+              </div>
+              <div class="wrapper">
+                <button class="btn btn-operation">Выполнено</button>
+                <button class="btn btn-operation">Удалить</button>
+              </div>
+            </li>
+
           </ul>
         </div>
       </div>
