--- a/app/html/index.html
+++ b/app/html/index.html
@@ -10,91 +10,13 @@
         </div>
         <div class="todo__add-task">
           <input class="todo__input" type="text" placeholder="Описание задачи">
-          <button class="btn" id="btn-add">Добавить</button>
+          <button class="btn" id="btn-add" onclick="new Audio('sound/addTask.mp3').play()">
+            Добавить
+          </button>
         </div>
         <div class="todo__tasks">
           <ul class="todo__tasks-list">
-
-            <li>
-              <div class="wrapper">
-                <img src="img/task.png" alt="task">кислота кислотакислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота 
-              </div>
-              <div class="wrapper">
-                <button class="btn btn-operation">Выполнено</button>
-                <button class="btn btn-operation">Удалить</button>
-              </div>
-            </li>
-
-            <li>
-              <div class="wrapper">
-                <img src="img/task.png" alt="task">кислота кислотакислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислотакислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислотакислота кислотакислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота
-              </div>
-              <div class="wrapper">
-                <button class="btn btn-operation">Выполнено</button>
-                <button class="btn btn-operation">Удалить</button>
-              </div>
-            </li>
-
-            <li>
-              <div class="wrapper">
-                <img src="img/task.png" alt="task">кислота кислотакислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота 
-              </div>
-              <div class="wrapper">
-                <button class="btn btn-operation">Выполнено</button>
-                <button class="btn btn-operation">Удалить</button>
-              </div>
-            </li>
-
-            <li>
-              <div class="wrapper">
-                <img src="img/task.png" alt="task">кислота кислотакислота 
-              </div>
-              <div class="wrapper">
-                <button class="btn btn-operation">Выполнено</button>
-                <button class="btn btn-operation">Удалить</button>
-              </div>
-            </li>
-
-            <li>
-              <div class="wrapper">
-                <img src="img/task.png" alt="task">кислота кислотакислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота 
-              </div>
-              <div class="wrapper">
-                <button class="btn btn-operation">Выполнено</button>
-                <button class="btn btn-operation">Удалить</button>
-              </div>
-            </li>
-
-            <li>
-              <div class="wrapper">
-                <img src="img/task.png" alt="task">кислота кислотакислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота 
-              </div>
-              <div class="wrapper">
-                <button class="btn btn-operation">Выполнено</button>
-                <button class="btn btn-operation">Удалить</button>
-              </div>
-            </li>
-
-            <li>
-              <div class="wrapper">
-                <img src="img/task.png" alt="task">кислота кислотакислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота 
-              </div>
-              <div class="wrapper">
-                <button class="btn btn-operation">Выполнено</button>
-                <button class="btn btn-operation">Удалить</button>
-              </div>
-            </li>
-
-            <li>
-              <div class="wrapper">
-                <img src="img/task.png" alt="task">кислота кислотакислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота кислота 
-              </div>
-              <div class="wrapper">
-                <button class="btn btn-operation">Выполнено</button>
-                <button class="btn btn-operation">Удалить</button>
-              </div>
-            </li>
-
+            
           </ul>
         </div>
       </div>
