--- a/app/index.html
+++ b/app/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="ru">
 <head>
 	<meta charset="utf-8">
 
 	<title>ToDo list by introversion</title>
-	<meta name="description" content="Description">
-	
-	<!-- Отключаем индексацию сайта -->
-	<meta name="robots" content="noindex, nofollow"/> 	
+	<meta name="description" content="ToDo list by introversion">
 
 	<!-- Запрещаем увеличивать страницу по двойному тапу -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -25,6 +22,9 @@
 
 	<!-- Подключаем стили -->
 	<link rel="stylesheet" href="css/app.css">
+	
+	<!-- Подключаем core js -->
+	<script defer src="js/app.js"></script>
 
 </head>
 
@@ -92,13 +92,11 @@
             d="m347.503906 84.195312-46.765625 12.53125 7.753907 28.941407 96.191406-25.777344-25.640625-99.390625-29.011719 7.484375 13.046875 50.5625c-42.164063-22.992187-89.449219-31.769531-137.121094-25.378906-47.972656 6.429687-93.3125 28.546875-127.667969 62.277343l20.988282 21.378907c60.625-59.519531 153.613281-72.53125 228.226562-32.628907zm0 0" />
         </svg>
       </button>
-      <p>2021</p>
+      <p class="copyright__date"></p>
     </div>
   </div>
 </footer>
 
-
-<script src="js/app.js"></script>
 
 </body>
 
